Trabajo en listados de modelos de alumnos

--- a/tests/Test_TMKmeans.ipynb
+++ b/tests/Test_TMKmeans.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "# appending the directory of mod.py\n",
     "# in the sys.path list\n",
-    "sys.path.append('C:/Users/fteje/Documents/Code/aicolearn/aicolearn/')       \n",
+    "sys.path.append('C:/Users/fteje/Documents/Code/aicolearning/')       \n",
     " \n",
     "# now we can import mod\n",
     "import teammaker  \n",
@@ -433,7 +433,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\fteje\\anaconda3\\envs\\DesarrolloDjango\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1382: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "C:\\Users\\fteje\\anaconda3\\envs\\AICoLearning\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1382: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -831,7 +831,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\fteje\\anaconda3\\envs\\DesarrolloDjango\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1382: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "C:\\Users\\fteje\\anaconda3\\envs\\AICoLearning\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1382: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -912,7 +912,21 @@
       "\n",
       "** LOG [ CREAR EQUIPOS ]  Generando equipos [0, 1, 2]\n",
       "\n",
-      "** LOG [ CREAR EQUIPOS ]  Inicio algoritmo KMeans\n",
+      "** LOG [ CREAR EQUIPOS ]  Inicio algoritmo KMeans\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fteje\\anaconda3\\envs\\AICoLearning\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1382: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "** LOG [ CREAR EQUIPOS ]  Fin algoritmo KMeans\n",
       "\n",
@@ -921,14 +935,6 @@
       "** LOG [ CREAR EQUIPOS ]  Equilibrando clusters\n",
       "\n",
       "** LOG [ CREAR EQUIPOS ]  Clusters equilibrados\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fteje\\anaconda3\\envs\\DesarrolloDjango\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1382: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
-      "  warnings.warn(\n"
      ]
     },
     {
@@ -972,7 +978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
